--- a/_includes/twitter-widget.html
+++ b/_includes/twitter-widget.html
@@ -1,2 +1,2 @@
-<a class="twitter-timeline" data-dnt="true" href="https://twitter.com/tamer_radi"  data-widget-id="338440089225027584" height="300">Tweets by @tamer_radi</a>
+<a class="twitter-timeline" data-dnt="true" href="https://twitter.com/tabdulradi"  data-widget-id="338440089225027584" height="300">Tweets by @tabdulradi</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
