Adds resume section

--- a/_includes/avatar-about.html
+++ b/_includes/avatar-about.html
@@ -1,2 +1,2 @@
-<img src="/assets/avatar.jpg" class="circle" />
+<img src="/assets/img/avatar.jpg" class="circle" />
 <p>Geek, Lazy Blogger, Developer, Find me in the backend ;) and yes... I am Open Sourcerer.</p>
