Fixes display glitches

--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -9,7 +9,7 @@
     <style>
     aside {
       text-align: center;
-    } 
+    }
     img {
       border: 0 none;
       height: auto;
@@ -22,10 +22,13 @@
     article footer {
       text-align: right;
     }
-
+    code {
+      display: block;
+      white-space: pre !important;
+    }
     </style>
 
-    {% include title.html %}    
+    {% include title.html %}
 
     <!-- Bootstrap core CSS -->
     <link href="/assets/css/bootstrap.css" rel="stylesheet">
